# whisper

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: test.ipynb
